# oact_utils

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  check_job.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
data/big_benchmark/: Notes.docx  dataset.xlsx
data/big_benchmark_filtered/: dataset.xlsx
data/phase_two/: runner.py
docs/: parsl_integration.md
docs/plans/: 2026-02-06-feat-parsl-batch-submission-plan.md  2026-02-16-fix-job-status-updates-with-completion-callback-plan.md  2026-02-27-fix-rerun-singlets-with-uks-plan.md  2026-03-25-feat-workflow-state-machine-db-redesign-plan.md  2026-03-27-fix-pre-submission-completion-check-plan.md  2026-06-25-drac-fairshare-throughput-diagnosis.md
examples/: architector_workflow_example.py  plot_actinide_neighbors.py
examples/an66_distance_spin_sweeps/: create_an66_dissociation_db.py  plot_dissociation_curves.py
examples/drac/: README.md  h2o_mpi_test.inp  orca_fir_test.sh  probe_storage.sh  setup_venv.sh  sqlite_lock_test.py
examples/sella_water_example/: run_sella_water.py
examples/wave2/: create_wave2_workflow_db.py  example_usage.py
fairchem_configs/: base.yaml  train_actnonact.yaml  train_combined_3ds.yaml  train_esen_50k.yaml
fairchem_configs/backbone/: eSEN_K4L2.yaml  eSEN_K4L2_small.yaml  eSEN_small.yaml
fairchem_configs/cluster/: Nersc.yaml  delta_4gpu.yaml
fairchem_configs/dataset/: actnonact.yaml  combined_3ds.yaml  napf6_dme.yaml
fairchem_configs/element_refs/: actnonact.yaml  combined_3ds.yaml  napf6_dme.yaml
fairchem_configs/tasks/: ef.yaml  ef_actnonact.yaml  efs.yaml
launch/: run_parsl_drac.template.sh  run_parsl_sandia.template.sh
oact_utilities/launch/: globus_transfer_completed.sh  run_parsl_coordinator.sh  run_parsl_drac_big.sh  run_parsl_drac_huge.sh  run_parsl_drac_medium.sh  run_parsl_drac_small.sh  run_parsl_multi_node.sh  run_parsl_multi_node_non_actinides.sh  sftp_transfer.sh  (+6 more)
tests/: test_actinide_neighbors.py  test_analysis.py  test_batched_optimizer.py  test_calculator.py  test_check_multi_spin.py  test_chunk_architector.py  test_chunk_architector_lmdb.py  test_clean.py  test_dashboard.py  test_dashboard_marker.py  test_diagnose_coverage.py  test_entropy_selection.py  test_fix_unlinked.py  test_generator_parsing.py  test_globus_transfer.py  test_globus_transfer_completed_script.py  test_hpc.py  test_inventory.py  test_merge_job_roots.py  test_multi_spin_from_converged_calcs.py  test_optimize_streaming.py  test_orca_cache.py  test_overlap.py  test_prepare_seeded_sella_db.py  test_quacc.py  test_rerun_singlets_uks.py  test_run_multi_spin.py  test_sella_dashboard.py  test_sella_runner.py  test_status.py  test_submit_jobs.py  test_wandb_logger.py  test_workflow.py  test_workflow_parsers.py
todos/: 001-complete-p1-type-hint-error-any-to-any.md  001-pending-p1-type-hint-error-any-to-any.md  002-complete-p1-hardcoded-test-paths.md  002-pending-p1-hardcoded-test-paths.md  003-complete-p1-duplicate-conditional.md  003-pending-p1-duplicate-conditional.md  004-complete-p1-path-traversal-vulnerability.md  004-pending-p1-path-traversal-vulnerability.md  005-complete-p1-missing-charge-spin-conservation.md  005-pending-p1-missing-charge-spin-conservation.md  006-complete-p1-missing-transaction-boundaries.md  006-pending-p1-missing-transaction-boundaries.md  006-ready-p1-missing-transaction-boundaries.md  007-complete-p2-memory-inefficiency-file-loading.md  007-pending-p2-memory-inefficiency-file-loading.md  007-ready-p2-memory-inefficiency-file-loading.md  008-complete-p1-missing-schema-versioning.md  008-pending-p1-missing-schema-versioning.md  009-complete-p1-missing-json-validation.md  009-pending-p1-missing-json-validation.md  009-ready-p1-missing-json-validation.md  010-complete-p1-sql-injection-patterns.md  010-pending-p1-sql-injection-patterns.md  011-pending-p2-high-cyclomatic-complexity.md  011-ready-p2-high-cyclomatic-complexity.md  012-pending-p2-code-duplication.md  012-ready-p2-code-duplication.md  013-complete-p1-database-column-injection.md  013-pending-p1-database-column-injection.md  014-complete-p1-invalid-spin-multiplicity.md  014-pending-p1-invalid-spin-multiplicity.md  014-ready-p1-invalid-spin-multiplicity.md  SQL_INJECTION_AUDIT.md
(+158 files in other folders)
