[project]
name = "oact_utilities"
version = "0.1.0"
description = "Utilities for ORCA and actinide chemistry workflows"
authors = [
    { name = "Santiago Vargas", email = "santiagovargas921@gmail.com" }
]
requires-python = ">=3.11"
# quacc (core/orca) and spyrmsd (utils/analysis) are imported unguarded at
# module level, so they are required runtime dependencies, not optional.
dependencies = ["sella", "ase", "periodictable", "pandas", "parsl>=2024.1", "tqdm>=4.0", "quacc", "spyrmsd"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pre-commit>=3.0",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "qtaim_generator",
]
generator = [
    "qtaim_generator",
]
jupyter = [
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "ipython>=8.0",
]
# matplotlib (analysis plotting, lazy-imported) and tabulate (multi_spin script,
# guarded) are non-blocking extras.
viz = [
    "matplotlib",
    "tabulate",
]
# lmdb backs the architector LMDB chunking path (guarded import).
lmdb = [
    "lmdb",
]

[tool.setuptools.packages.find]
include = ["oact_utilities*"]
exclude = ["data*"]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | data
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "data",
]

# Ruff lint rules:
# E/W = pycodestyle, F = pyflakes, I = isort, B = bugbear, UP = pyupgrade
[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["oact_utilities"]

# Mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "data/",
    "tests/",
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
